add nested-col adjustment

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <div class="row">
             <div class="col-6">
-                <div class="row">
+                <div class="row row-nested">
                     <div class="col-2 col-nested">
                         <div class="content">
                             nested-col
@@ -69,8 +69,9 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-6">
-                <div class="row">
+                <div class="row row-nested">
                     <div class="col-6 col-nested">
                         <div class="content">
                             nested-col
@@ -136,7 +137,6 @@
             <div class="col-10 offset-2"></div>
             <div class="col-11 offset-1"></div>
             <div class="col-12"></div>
-
         </div>
     </div>
 </body>
